<resources>
    <string name="app_name">&appname;</string>
    <string name="legal_title">Important</string>
    <string name="legal_content">Sproutling® Wearable Baby Monitor is not a medical device.\n\n
        What Information May Be Collected
        \n \t \t \u2022 First and last name of parent/caregiver
        \n \t \t \u2022 Email address
        \n \t \t \u2022 Mobile phone number
        \n \t \t \u2022 Baby\'s photo, gender, date of birth and original due date
        \n \t \t \u2022 Baby\'s heart rate, motion activity and room conditions (e.g. light level, temperature)
        \n \t \t \u2022 Technical (Connected monitor ID, Device ID, IP address, etc.) \n\n
        Why It’s Collected
        \n \t \t \u2022 Internal operations (e.g. analytics, including determining sleep patterns) \n\n
        With Whom It\'s Shared
        \n \t \t \u2022 Internal operations\’ service providers\n\n
        Contact Us/Review or Delete Your or Your Baby\'s Collected Info
        \n \t \t  Mattel Consumer Relations \n
        \t \t 636 Girard Avenue\n
        \t \t East Aurora, NY 14052
        \n \t \t  Call: 1-877-219-8335
         \n \t \t E-mail: service@mattel.com
    </string>
    <string name="legal_button_accept">I Accept</string>
    <string name="legal_terms" formatted="false">By tapping I Accept, you agree to our <a href="http://rebrand.ly/sproutling-terms-of-service">Terms of Service</a>  and <a href="http://rebrand.ly/sproutling-privacy-statement">Privacy Statement</a>.</string>
    <string name="legal_tos_scheme">terms</string>
    <string name="legal_pp_scheme">privacy</string>
    <string name="tos_title_terms">Terms of Service</string>
    <string name="tos_title_pp">Privacy Statement</string>
    <string name="action_settings">Settings</string>
    <string name="main_message">Grow Happy Families</string>
    <string name="main_button_log_in">Log In</string>
    <string name="main_button_sign_up">Sign Up</string>
    <string name="main_button_setup_account">Set up a new &appname;</string>
    <string name="main_button_join_family">Join an existing family</string>
    <string name="server_error_message_title">Uh Oh</string>
    <string name="server_error_message_body">Something went wrong.\nPlease try again.</string>
    <string name="server_error_message_button">Got It</string>
    <string name="login_title">Welcome Back</string>
    <string name="login_or">Or</string>
    <string name="login_email_or_mobile_phone">E-mail or Mobile Phone #</string>
    <string name="login_email__or_mobile_phone_error">Invalid email or phone number format</string>
    <string name="login_password">Password</string>
    <string name="login_password_error">Error</string>
    <string name="login_sign_in">Sign In</string>
    <string name="login_forgot_password">Forgot Your password?</string>
    <string name="login_error_message_title">Uh Oh</string>
    <string name="login_error_message_body">Email and password do not match. Please try again.</string>
    <string name="forgot_navigation_send">Send</string>
    <string name="forgot_navigation_next">Next</string>
    <string name="forgot_navigation_save">Save</string>
    <string name="forgot_enter_phone_number_navigation_title">Forgot Password</string>
    <string name="forgot_enter_phone_number_title">Enter Phone Number</string>
    <string name="forgot_enter_phone_number_message">Enter the phone number you used to register. We will send you a text message with a verification code to create a new password.</string>
    <string name="forgot_enter_phone_number_phone_hint">Mobile Phone</string>
    <string name="forgot_enter_phone_number_phone_error">Unknown phone number. Please try again.</string>
    <string name="forgot_enter_phone_number_notice">Standard SMS rates may apply</string>
    <string name="forgot_verification_navigation_title">Verification Code</string>
    <string name="forgot_verification_title">Enter Verification Code</string>
    <string name="forgot_verification_message">Read the text message from &appname; with a security code to reset your password.</string>
    <string name="forgot_verification_instruction">Enter the code sent to %s</string>
    <string name="forgot_verification_error_expired">Verification Code is expired. Please tap on Resend Code and enter the new code sent.</string>
    <string name="forgot_verification_error_invalid">Please check your text message for the verification code.</string>
    <string name="forgot_verification_resend">Request new Code</string>
    <string name="forgot_resent_title">Verification Code Re-sent</string>
    <string name="forgot_resent_message">Read the new text message from &appname; with a security code to reset your password.</string>
    <string name="forgot_resent_ok">Got It</string>
    <string name="forgot_new_password_navigation_title">New Password</string>
    <string name="forgot_new_password_title">Enter New Password</string>
    <string name="forgot_new_password_message">Please enter a new password for your account.</string>
    <string name="forgot_new_password_new_password_hint">New Password</string>
    <string name="forgot_new_password_confirm_password_hint">Confirm Password</string>
    <string name="forgot_new_password_password_not_matching">Password do not match</string>
    <string name="forgot_new_password_tips">Password Tips</string>
    <string name="forgot_new_password_tips_content">At least 8 characters long Contains at least one number Includes uppercase and lowercase letters Add a special character</string>
    <string name="qr_scanner_title">QR Code</string>
    <string name="qr_scanner_message">Scan a &appname;
        QR code to accept your invitation instantly.</string>
    <string name="qr_scanner_message_expired">QR code is expired. Please ask the parent to generate a new one.</string>
    <string name="qr_scanner_message_wait">Please wait…</string>
    <string name="qr_scanner_message_allow_camera">Allow &appname;
        to access your camera to scan a &appname; QR code.</string>
    <string name="qr_scanner_allow_text">Allow Camera Access</string>
    <string name="qr_scanner_permission_title">Camera Permission</string>
    <string name="qr_scanner_permission_message">Need to grant camera permission!</string>
    <string name="qr_scanner_permission_positive">SETTINGS</string>
    <string name="qr_scanner_permission_negative">DISMISS</string>
    <string name="setup_navigation_next">Next</string>
    <string name="setup_navigation_try_again">Try Again</string>
    <string name="setup_navigation_join">Join</string>
    <string name="setup_account_creation_title">Account Creation</string>
    <string name="setup_account_creation_navigation_next">Next</string>
    <string name="setup_account_creation_terms" formatted="false">By signing up, I agree to &appname;\'s %1$s and %2$s.</string>
    <string name="setup_account_creation_tos"><u>Terms of Service</u></string>
    <string name="setup_account_creation_tos_scheme">terms</string>
    <string name="setup_account_creation_pp"><u>Privacy Policy</u></string>
    <string name="setup_account_creation_pp_scheme">privacy</string>
    <string name="setup_account_creation_or">Or</string>
    <string name="setup_account_creation_first_name">First Name</string>
    <string name="setup_account_creation_first_name_error">First Name is required</string>
    <string name="setup_account_creation_last_name">Last Name</string>
    <string name="setup_account_creation_last_name_error">Last Name is required</string>
    <string name="setup_account_creation_email">E-mail</string>
    <string name="setup_account_creation_email_error">E-mail is required</string>
    <string name="setup_account_creation_email_invalid">Invalid email address</string>
    <string name="setup_account_creation_email_used">This email address is already registered</string>
    <string name="setup_account_creation_email_scheme">email</string>
    <string name="setup_account_creation_phone">Mobile Phone</string>
    <string name="setup_account_creation_phone_error">Mobile Phone is required</string>
    <string name="setup_account_creation_phone_invalid">Invalid phone number</string>
    <string name="setup_account_creation_phone_used">The phone number is already registered</string>
    <string name="setup_account_creation_password">Password</string>
    <string name="setup_account_creation_password_error">Password is required</string>
    <string name="setup_account_creation_password_short">Password must be at least 8 characters</string>
    <string name="setup_account_creation_password_long">Password cannot be more than 72 characters</string>
    <string name="setup_account_creation_retype_password">Re-type Password</string>
    <string name="setup_account_creation_retype_password_error">Password is required</string>
    <string name="setup_account_creation_retype_password_mismatch">Passwords do not match</string>
    <string name="setup_account_creation_error_message_title">Error</string>
    <string name="setup_account_creation_error_message_body">There was a problem creating your account, please try again.</string>
    <string name="setup_account_creation_error_email_title">Uh Oh</string>
    <string name="setup_account_creation_error_email_body">This email address is already registered.</string>
    <string name="setup_account_creation_error_email_button">Tap here to sign in</string>
    <string name="setup_add_child_title">Add Child</string>
    <string name="setup_add_child_add_photo">Add a Photo</string>
    <string name="setup_add_child_select_gender">BABY\'S GENDER</string>
    <string name="setup_add_child_girl">Girl</string>
    <string name="setup_add_child_boy">Boy</string>
    <string name="setup_add_child_baby_name_hint">Baby\'s Name</string>
    <string name="setup_add_child_baby_name_error">Baby\'s Name is required</string>
    <string name="setup_add_child_birthday_hint">Birthday</string>
    <string name="setup_add_child_birthday_error">Birthday is required.</string>
    <string name="setup_add_child_birthday_error_future">Birthday cannot be in the future</string>
    <string name="setup_add_child_due_date_hint">Original Due Date</string>
    <string name="setup_add_child_due_date_error">Due date is required</string>
    <string name="setup_add_child_due_date_error_after">The original due date can be no more than 20 weeks after the birthday</string>
    <string name="setup_add_child_due_date_error_before">The original due date can be no more than 6 weeks before the birthday</string>
    <string name="setup_add_child_why">Why we ask for dates</string>
    <string name="setup_add_child_skip">Skip Setup</string>
    <string name="settings_account_section_account">My Account</string>
    <string name="settings_account_first_name">First Name</string>
    <string name="settings_account_last_name">Last Name</string>
    <string name="settings_account_email">E-mail</string>
    <string name="settings_account_phone">Mobile Phone</string>
    <string name="settings_account_change_password">Change Password</string>
    <string name="settings_account_first_name_error">First name is required</string>
    <string name="settings_account_last_name_error">Last name is required</string>
    <string name="settings_account_email_error">E-mail is required</string>
    <string name="settings_account_phone_error">Mobile Phone is required</string>
    <string name="settings_account_sign_out">Log Out</string>
    <string name="settings_change_password_old_password_error">Old password does not match</string>
    <string name="settings_wifi_password_instruction">Enter the password for %1$s</string>
    <string name="settings_wifi_password_hint">Password</string>
    <string name="setup_account_creation_mobile_phone_info">Your phone number will only be used when you need to recover your forgotten password.</string>
    <string name="code">Code</string>
</resources>