<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.sproutling.ui.widget.ShTextView
        android:id="@+id/title"
        style="@style/SubtextOne.10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/forgot_enter_phone_number_title"/>

    <com.sproutling.ui.widget.ShTextView
        android:id="@+id/message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/forgot_enter_phone_number_message"
        style="@style/SubtextOne.8"/>

    <com.sproutling.ui.widget.CustomShInputTextLayout
        android:id="@+id/phoneWrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/message"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        app:errorMsg="@string/forgot_enter_phone_number_phone_error"
       >

        <com.sproutling.ui.widget.CustomShEditText
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/forgot_enter_phone_number_phone_hint"
            android:inputType="phone"
            android:maxLines="1"
            android:singleLine="true"/>
    </com.sproutling.ui.widget.CustomShInputTextLayout>

    <com.sproutling.ui.widget.ShTextView
        android:id="@+id/notice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:text="@string/forgot_enter_phone_number_notice"
        style="@style/SubtextOne.6"/>
</RelativeLayout>