<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent">


    <com.sproutling.ui.widget.ShTextView
        android:id="@+id/tips_content"
        style="@style/SubtextOne.6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/forgot_new_password_tips_content"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/tips_content"
        android:background="@color/white"
        android:paddingBottom="15dp">

        <com.sproutling.ui.widget.ShTextView
            android:id="@+id/title"
            style="@style/SubtextOne.10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:text="@string/forgot_new_password_title"/>

        <com.sproutling.ui.widget.ShTextView
            android:id="@+id/message"
            style="@style/SubtextOne.8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/title"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/forgot_new_password_message"/>

        <com.sproutling.ui.widget.CustomShInputTextLayout
            android:id="@+id/passwordWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/message"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="25dp"
            app:errorMsg="@string/setup_account_creation_password_error"
            app:infoMsg="@string/setup_account_creation_password_short"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/colorAccent">

            <com.sproutling.ui.widget.CustomShEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/forgot_new_password_new_password_hint"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"/>
        </com.sproutling.ui.widget.CustomShInputTextLayout>

        <com.sproutling.ui.widget.CustomShInputTextLayout
            android:id="@+id/confirm_passwordWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/passwordWrapper"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="25dp"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/colorAccent">

            <com.sproutling.ui.widget.CustomShEditText
                android:id="@+id/confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/forgot_new_password_confirm_password_hint"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"/>
        </com.sproutling.ui.widget.CustomShInputTextLayout>

        <com.sproutling.ui.widget.ShTextView
            android:id="@+id/tips"
            style="@style/SubtextOne.6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:drawableLeft="@drawable/ic_light_bulb_small"
            android:drawablePadding="4dp"
            android:gravity="center"
            android:text="@string/forgot_new_password_tips"/>
    </RelativeLayout>

</RelativeLayout>