<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <com.sproutling.ui.widget.ShTextView
        android:id="@+id/title"
        style="@style/SubtextOne.10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/forgot_verification_title"/>

    <com.sproutling.ui.widget.ShTextView
        android:id="@+id/instruction"
        style="@style/SubtextOne.8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:gravity="center"
        android:text="@string/forgot_verification_instruction"/>


    <com.sproutling.ui.widget.CustomShInputTextLayout
        android:id="@+id/codeWrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/instruction"
        android:layout_marginLeft="80dp"
        android:layout_marginRight="80dp"
        android:layout_marginTop="25dp"
        app:errorMsg="@string/forgot_verification_error_expired">

        <com.sproutling.ui.widget.CustomShEditText
            android:id="@+id/code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/code"
            android:inputType="numberDecimal"
            android:letterSpacing="0.3"
            android:maxEms="5"
            android:maxLength="5"
            android:minEms="5"/>
    </com.sproutling.ui.widget.CustomShInputTextLayout>

    <com.sproutling.ui.widget.ShTextView
        android:id="@+id/resend"
        style="@style/SubtextFive.4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:padding="10dp"
        android:text="@string/forgot_verification_resend"/>
</RelativeLayout>