<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <com.sproutling.ui.widget.ShTextView
        android:id="@+id/instruction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin"
        android:layout_marginRight="@dimen/margin"
        android:layout_marginTop="30dp"
        android:text="@string/settings_wifi_password_instruction"/>


    <com.sproutling.ui.widget.CustomShInputTextLayout
        android:id="@+id/passwordWrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/instruction"
        android:layout_margin="@dimen/margin"
        app:errorMsg="@string/settings_change_password_old_password_error"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/colorAccent">

        <com.sproutling.ui.widget.CustomShEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/settings_wifi_password_hint"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true"/>
    </com.sproutling.ui.widget.CustomShInputTextLayout>

</RelativeLayout>